--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "url": "https://github.com/artoale/sass-intelligence/issues"
   },
   "devDependencies": {
-	"chai": "~1.8.1",
+    "chai": "~1.8.1",
     "grunt": "~0.4.1",
     "grunt-mocha-test": "0.7.0",
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-umd": "~1.3.0"
   }
 }
