--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,25 @@
         "describe": true,
         "define": true,
         "it": true,
-        "module": true
+        "module": true,
+        "beforeEach":true
     },
+    "eqeqeq": true,
+    "curly": true,
+    "camelcase": true,
+    "forin": true,
+    "immed": true,
+    "indent": 4,
+    "latedef": true,
+    "newcap": true,
+    "noempty": true,
+    "nonew": true,
+    "plusplus": true,
+    "quotmark": "single",
+    "undef": true,
+    "unused": "vars",
+    "strict": true,
+    "trailing": true,
+    "trailing": true,
     "expr": true
 }
