--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "git://github.com/artoale/sass-intelligence.git"
   },
   "keywords": [
-    "SASS",    
-	"SCSS",
+    "SASS",
+    "SCSS",
     "hint"
   ],
   "license": "BSD",
@@ -28,6 +28,11 @@
     "grunt-mocha-test": "0.7.0",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-umd": "~1.3.0"
+    "grunt-umd": "~1.3.0",
+    "sinon": "~1.7.3",
+    "sinon-chai": "~2.4.0"
+  },
+  "dependencies": {
+    "di": "0.0.1"
   }
 }
