--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-umd": "~1.3.0",
     "sinon": "~1.7.3",
-    "sinon-chai": "~2.4.0"
+    "sinon-chai": "~2.4.0",
+    "chai-as-promised": "~4.1.0",
+    "lex": "~1.7.4"
   },
   "dependencies": {
-    "di": "0.0.1"
+    "di": "0.0.1",
+    "q": "~0.9.7"
   }
 }
